--- a/inspiration.html
+++ b/inspiration.html
@@ -42,8 +42,9 @@
         <li><button class="dropdown-item" type="button" onclick="document.location='shop.html'">Butik</button></li>
         <li><button class="dropdown-item" type="button" onclick="document.location='#footer-title'">Om oss</button></li>
         <li><button class="dropdown-item" type="button" onclick="document.location='inspiration.html'">Inspiration</button></li>
-        <li><button class="dropdown-item" type="button" onclick="document.location='./pages/kassa.html'">kassa</button></li>
-        <li><button class="dropdown-item" type="button" onclick="document.location='./pages/konto.html'">Konto</button></li>
+        <li><button class="dropdown-item" type="button" onclick="document.location='/pages/wishlist.html'">Wishlist</button></li>
+        <li><button class="dropdown-item" type="button" onclick="document.location='/pages/kassa.html'">kassa</button></li>
+        <li><button class="dropdown-item" type="button" onclick="document.location='/pages/konto.html'">Konto</button></li>
         <li><button class="dropdown-item" type="button" onclick="document.location='#footer-title'">Kontakt</button></li>
       </ul>
     </div>
@@ -127,8 +128,12 @@
       
     </div>
 </div>
-<p class="footer-title" id="footer-title">om oss</p>
-<p class="info">Lorem ipsum, dolor sit auisquam  error ipsum laborum tempore in rerum necessitatibus nostrum nobis modi! Debitis adipisci illum nemo aperiam sed, et accusamus ut officiis. Laborum illo exercitationem quo culpa reprehenderit excepturi distinctio tempore cupiditate praesentium nisi ut iusto, assumenda perferendis facilis voluptas autem fuga sunt ab debitis voluptatum harum eum. Asperiores, natus! Est deserunt incidunt quasi placeat omnis, itaque harum?</p>
+<p class="footer-title-about" id="footer-title">om oss</p>
+<p class="info-text">Skaparhyttan är ett företag som bygger på Anja Edmans skaparkraft och fantasi. 
+Utbudet  är brett och smalt men alltid med glimten i ögat och fullt av lekfulhet, materialen likaså allt från ull till glas. <br>
+Anja har varit skapande sedan barnsben och nu tagit steget ut i världen så att fler skall få njuta av kreationerna. <br>
+Om du önskar något egendesignat hör av dig, här finns bara möjligheter. <br>
+Välkommen! </p>
 
 <p class="footer-title">kontakt</p>
 <p class="info">email - skaparhyttan@outlook.com</p>
