--- a/pages/wishlist.html
+++ b/pages/wishlist.html
@@ -26,7 +26,7 @@
 
     <script src="https://kit.fontawesome.com/003b6bb9ad.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="../css/kassa.css" />
+    <link rel="stylesheet" href="../css/wishlist.css" />
   </head>
   <body>
 <header>
@@ -36,19 +36,18 @@
 
     <div class="dropdown" id="dropdown">
       <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-      
-      </button>
-      <ul class="dropdown-menu">
-        <li><button class="dropdown-item" type="button" onclick="document.location='../shop.html'">Butik</button></li>
-        <li><button class="dropdown-item" type="button" onclick="document.location='#footer-title'">Om oss</button></li>
-        <li><button class="dropdown-item" type="button" onclick="document.location='../inspiration.html'">Inspiration</button></li>
-          <li><button class="dropdown-item" type="button" onclick="document.location='/pages/wishlist.html'">Wishlist</button></li>
-        <li><button class="dropdown-item" type="button" onclick="document.location='kassa.html'">kassa</button></li>
-        <li><button class="dropdown-item" type="button" onclick="document.location='konto.html'">Konto</button></li>
-        <li><button class="dropdown-item" type="button" onclick="document.location='#footer-title'">Kontakt</button></li>
-      </ul>
-    </div>
-
+        
+  </button>
+  <ul class="dropdown-menu">
+    <li><button class="dropdown-item" type="button" onclick="document.location='../shop.html'">Butik</button></li>
+    <li><button class="dropdown-item" type="button" onclick="document.location='#footer-title'">Om oss</button></li>
+    <li><button class="dropdown-item" type="button" onclick="document.location='../inspiration.html'">Inspiration</button></li>
+      <li><button class="dropdown-item" type="button" onclick="document.location='/pages/wishlist.html'">Wishlist</button></li>
+    <li><button class="dropdown-item" type="button" onclick="document.location='kassa.html'">kassa</button></li>
+    <li><button class="dropdown-item" type="button" onclick="document.location='konto.html'">Konto</button></li>
+    <li><button class="dropdown-item" type="button" onclick="document.location='#footer-title'">Kontakt</button></li>
+  </ul>
+</div>
 
     <h5 class="logga-text" onclick="document.location='../index.html'">Skaparhyttan</h5>
    <!-- <div>  <i class="fa-solid fa-cart-shopping shoppingcart"  style='font-size:24px'></i> </div> -->
@@ -70,7 +69,7 @@
 
 <main>
   <div>
-<h1 class="text">Kassan är under uppbyggnad</h1>
+<h1 class="text">Wishlist är under uppbyggnad</h1>
 </div>
 </main>
 
@@ -117,15 +116,6 @@
   </footer>
   
 
-
-
-
-
-
-
-
-
-
     <!-- Länk för Javascript filerna, den ska antagligen ligga först den också - men vi har  inte ens börjat med JS på Udemy än, så kan återkomma med det.-->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
@@ -133,6 +123,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="../app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
+
