--- a/pages/inredning.html
+++ b/pages/inredning.html
@@ -73,13 +73,13 @@
   <div class="card-group card-group2">
 
   <div class="card card-1" style="width: 18rem;">
-    <img src="../img/kakfat1.jpg"class="card-img-top1" alt="...">
+    <img src="../img/kakfat1.jpg"card-img-top1" alt="...">
     <a href="../pages/wishlist.html"> <img src="../img/heart.png" class="wishlist-icon"> </a>
     <div class="card-body">
       <h5 class="card-title">KAKFAT</h5>
       <p class="card-text">En fröjd för ögat att sätta dina godsaker på. </p>
       <p class="card-text-pris">Mått: ?x? </p>
-      <p class="card-text-pris">Pris: 650r </p>
+      <p class="card-text-pris">Pris: 650kr </p>
       <a href="../pages/kassa.html" class="btn btn-primary">HANDLA</a>
     </div>
   </div>
@@ -91,13 +91,13 @@
       <h5 class="card-title">ÄNGLAR</h5>
       <p class="card-text">Skapade i lera <br> <br></p>
       <p class="card-text-pris">Mått: ?x? </p>
-      <p class="card-text-pris">Pris: ? </p>
+      <p class="card-text-pris">Pris: 495kr </p>
       <a href="../pages/kassa.html" class="btn btn-primary">HANDLA</a>
     </div>
   </div>
 
   <div class="card card-3" style="width: 18rem;">
-    <img src="../img/ljusstake.jpg" class="card-img-top1" alt="...">
+    <img src="../img/ljus6.jpg" class="card-img-top1" alt="...">
     <a href="../pages/wishlist.html"> <img src="../img/heart.png" class="wishlist-icon"> </a>
     <div class="card-body">
       <h5 class="card-title">LJUS</h5>
