--- a/pages/shop.html
+++ b/pages/shop.html
@@ -58,19 +58,14 @@
         </div>
         <div class="box">
     
-            <div class="cart-count">0</div>
+            <!-- <div class="cart-count">0</div> -->
             <a href="#footer-title"> <img src="../img/user.png"   class="header-user"> </a>
-            <ion-icon name="cart"  id="cart-icon" ></ion-icon>
+            <!-- <ion-icon name="cart"  id="cart-icon" ></ion-icon> -->
             
             <!-- <a href="kassa.html"> <img src="../img/cart.png"   class="shoppingcart" id="cart-icon"> </a> -->
           </div>
   </div>
  
-
-
-
-
-
 
 
     <div class="nav">
@@ -139,68 +134,77 @@
           <img src="../img/m-morotskaka3.jpg" class="food-img">
         </div>
         <h2 class="food-title">Miniatyrsmycken</h2>
-        <span class="food-price">300:-</span>
-        <ion-icon name="cart" class="add-cart"></ion-icon>
+        <!-- <span class="food-price">300:-</span>
+        <ion-icon name="cart" class="add-cart"></ion-icon> -->
+        <button  onclick="document.location='miniatyrsmycken.html'"  class=" btn">Se mer</button>
       </div>
 
 
       <div class="product-box">
         <div class="pic"><img src="../img/Design by Miss Anja Edman 366.jpg" class="food-img"></div>
         <h2 class="food-title">Glassmycken</h2>
-        <span class="food-price">300:-</span>
-        <ion-icon name="cart" class="add-cart"></ion-icon>
+        <!-- <span class="food-price">300:-</span>
+        <ion-icon name="cart" class="add-cart"></ion-icon> -->
+        <button  onclick="document.location='glassmycken.html'"  class=" btn">Se mer</button>
       </div>
   
       <div class="product-box">
         <div class="pic"><img src="../img/Akryltavla växtkraft.jpg" class="food-img"></div>
         <h2 class="food-title">Konst</h2>
-        <span class="food-price">300:-</span>
-        <ion-icon name="cart" class="add-cart"></ion-icon>
+        <!-- <span class="food-price">300:-</span>
+        <ion-icon name="cart" class="add-cart"></ion-icon> -->
+        <button  onclick="document.location='konst.html'"  class=" btn">Se mer</button>
       </div>
   
       <div class="product-box">
         <div class="pic"><img src="../img/kakfat1.jpg" class="food-img"></div>
         <h2 class="food-title">Kakfat</h2>
-        <span class="food-price">300:-</span>
-        <ion-icon name="cart" class="add-cart"></ion-icon>
+        <!-- <span class="food-price">300:-</span>
+        <ion-icon name="cart" class="add-cart"></ion-icon> -->
+        <button  onclick="document.location='kakfat.html'"  class=" btn">Se mer</button>
       </div>
   
       <div class="product-box">
         <div class="pic"><img src="../img/ängel1.jpg" class="food-img"></div>
         <h2 class="food-title">Änglar</h2>
-        <span class="food-price">300:-</span>
-        <ion-icon name="cart" class="add-cart"></ion-icon>
+        <!-- <span class="food-price">300:-</span>
+        <ion-icon name="cart" class="add-cart"></ion-icon> -->
+        <button  onclick="document.location='anglar.html'"  class=" btn">Se mer</button>
       </div>
   
       <div class="product-box">
         <div class="pic"><img src="../img/ljus6.jpg" class="food-img"></div>
         <h2 class="food-title">Ljus</h2>
-        <span class="food-price">300:-</span>
-        <ion-icon name="cart" class="add-cart"></ion-icon>
+        <!-- <span class="food-price">300:-</span>
+        <ion-icon name="cart" class="add-cart"></ion-icon> -->
+        <button  onclick="document.location='ljus.html'"  class=" btn">Se mer</button>
       </div>
   
   
       <div class="product-box">
         <div class="pic"><img src="../img/vekhållare-flera.jpg" class="food-img"></div>
         <h2 class="food-title">Vekhållare</h2>
-        <span class="food-price">300:-</span>
-        <ion-icon name="cart" class="add-cart"></ion-icon>
+        <!-- <span class="food-price">300:-</span>
+        <ion-icon name="cart" class="add-cart"></ion-icon> -->
+        <button  onclick="document.location='vekhallare.html'"  class=" btn">Se mer</button>
       </div>
   
   
       <div class="product-box">
         <div class="pic"><img src="../img/ull-figurer.jpg" class="food-img"></div>
         <h2 class="food-title">Ullfigurer</h2>
-        <span class="food-price">300:-</span>
-        <ion-icon name="cart" class="add-cart"></ion-icon>
+        <!-- <span class="food-price">300:-</span>
+        <ion-icon name="cart" class="add-cart"></ion-icon> -->
+        <button  onclick="document.location='ull.html'"  class=" btn">Se mer</button>
       </div>
   
       <div class="product-box">
         <div class="pic"> <img src="../img/underlägg-flera.jpg" class="food-img">
         </div>
         <h2 class="food-title">Glasunderlägg</h2>
-        <span class="food-price">300:-</span>
-        <ion-icon name="cart" class="add-cart"></ion-icon>
+        <!-- <span class="food-price">300:-</span>
+        <ion-icon name="cart" class="add-cart"></ion-icon> -->
+        <button  onclick="document.location='glasunderlagg.html'"  class=" btn">Se mer</button>
       </div>
 
       <div class="product-box">
@@ -208,8 +212,9 @@
           <img src="../img/lp-dala.jpg" class="food-img">
         </div>
         <h2 class="food-title">LP-klockor</h2>
-        <span class="food-price">300:-</span>
-        <ion-icon name="cart" class="add-cart"></ion-icon>
+        <!-- <span class="food-price">300:-</span>
+        <ion-icon name="cart" class="add-cart"></ion-icon> -->
+        <button  onclick="document.location='lp-klockor.html'"  class=" btn">Se mer</button>
       </div>
 
       <div class="product-box">
@@ -217,8 +222,9 @@
           <img src="../img/fairy1.jpg" class="food-img">
         </div>
         <h2 class="food-title">Småhus</h2>
-        <span class="food-price">300:-</span>
-        <ion-icon name="cart" class="add-cart"></ion-icon>
+        <!-- <span class="food-price">300:-</span>
+        <ion-icon name="cart" class="add-cart"></ion-icon> -->
+        <button  onclick="document.location='smahus.html'"  class=" btn">Se mer</button>
       </div>
 
       <div class="product-box">
@@ -226,8 +232,9 @@
           <img src="../img/smyckeburkar.jpg" class="food-img">
         </div>
         <h2 class="food-title">Askar</h2>
-        <span class="food-price">300:-</span>
-        <ion-icon name="cart" class="add-cart"></ion-icon>
+        <!-- <span class="food-price">300:-</span>
+        <ion-icon name="cart" class="add-cart"></ion-icon> -->
+        <button  onclick="document.location='askar.html'"  class=" btn">Se mer</button>
       </div>
 
       <div class="product-box">
@@ -237,6 +244,7 @@
         <h2 class="food-title">Pendlar</h2>
         <span class="food-price">300:-</span>
         <ion-icon name="cart" class="add-cart"></ion-icon>
+        <button  onclick="document.location='pendlar.html'"  class=" btn">Se mer</button>
       </div>
 
       <div class="product-box">
@@ -244,18 +252,19 @@
           <img src="../img/blomma22.JPG" class="food-img">
         </div>
         <h2 class="food-title">Doftoljeblad och katter</h2>
-        <span class="food-price">300:-</span>
-        <ion-icon name="cart" class="add-cart"></ion-icon>
+        <!-- <span class="food-price">300:-</span>
+        <ion-icon name="cart" class="add-cart"></ion-icon> -->
+        <button  onclick="document.location='doftolja.html'"  class=" btn">Se mer</button>
       </div>
-
 
       <div class="product-box">
         <div class="pic">
           <img src="../img/smycke-blomma.jpg" class="food-img">
         </div>
         <h2 class="food-title">Silversmycken</h2>
-        <span class="food-price">300:-</span>
-        <ion-icon name="cart" class="add-cart"></ion-icon>
+        <!-- <span class="food-price">300:-</span>
+        <ion-icon name="cart" class="add-cart"></ion-icon> -->
+        <button  onclick="document.location='silversmycken.html'"  class=" btn">Se mer</button>
       </div>
 
     </div>
