--- a/pages/smycken1.html
+++ b/pages/smycken1.html
@@ -72,7 +72,7 @@
 
   <div class="card card-1" style="width: 18rem;">
     <img src="../img/Design by Miss Anja Edman 366.jpg" class="card-img-top " alt="...">
-    <a href="../pages/wishlist.html"> <img src="../img/heart.png" class="wishlist-icon"> </a>
+    <a href="../pages/wishlist.html"> <img src="../img/heart.png" class="wishlist-icon-smycken"> </a>
     <div class="card-body">
       <h5 class="card-title">GLASSMYCKE</h5>
       <p class="card-text">Skapade i Glas <br> Metoden kallas glasfusion och sker med hög värme under lång tid</p>
@@ -84,7 +84,7 @@
 
   <div class="card card-2" style="width: 18rem;">
     <img src="../img/smycke-blomma.jpg" class="card-img-top " alt="...">
-    <a href="../pages/wishlist.html"> <img src="../img/heart.png" class="wishlist-icon"> </a>
+    <a href="../pages/wishlist.html"> <img src="../img/heart.png" class="wishlist-icon-smycken"> </a>
     <div class="card-body">
       <h5 class="card-title">SILVERSMYCKE</h5>
       <p class="card-text">Skapat i silver <br> <br> <br> <br></p>
@@ -95,7 +95,7 @@
 
   <div class="card card-3" style="width: 18rem;">
     <img src="../img/m-morotskaka3.jpg" class="card-img-top " alt="...">
-    <a href="../pages/wishlist.html"> <img src="../img/heart.png" class="wishlist-icon"> </a>
+    <a href="../pages/wishlist.html"> <img src="../img/heart.png" class="wishlist-icon-smycken"> </a>
     <div class="card-body">
       <h5 class="card-title">Miniatyrsmycke <br> Morotstårta</h5>
       <p class="card-text">Roliga miniatyrer som inbjuder till bus och samtal <br> <br></p>
