--- a/shop3.html
+++ b/shop3.html
@@ -24,7 +24,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="../css/shop.css" />
+    <link rel="stylesheet" href="../css/shop3.css" />
  
 
   </head>
