--- a/pages/konto.html
+++ b/pages/konto.html
@@ -54,7 +54,7 @@
    <!-- <div>  <i class="fa-solid fa-cart-shopping shoppingcart"  style='font-size:24px'></i> </div> -->
    <div>     
     <a href="#footer-title"> <img src="../img/user.png"   class="header-user"> </a>
-    <a href="kassa.html"> <img src="../img/cart.png"   class="shoppingcart"> </a>
+    <!-- <a href="kassa.html"> <img src="../img/cart.png"   class="shoppingcart"> </a> -->
     </div>
  <!-- <img src="img/user.png" onclick="document.location='#kontakt-title'"  class="header-user"> -->
 
