--- a/pages/shop.html
+++ b/pages/shop.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="../css/shop.css">
+
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 
 
@@ -28,7 +28,8 @@
     />
 
     <script src="https://kit.fontawesome.com/003b6bb9ad.js" crossorigin="anonymous"></script>
-
+    <link rel="stylesheet" href="../css/shop.css">
+    
 </head>
 <body>
   <header>
@@ -165,7 +166,7 @@
       </div>
   
       <div class="product-box">
-        <div class="pic"><img src="../img/ängel1.jpg" class="food-img"></div>
+        <div class="pic"><img src="../img/angel1.jpg" class="food-img"></div>
         <h2 class="food-title">Änglar</h2>
         <!-- <span class="food-price">300:-</span>
         <ion-icon name="cart" class="add-cart"></ion-icon> -->
