--- a/pages/wishlist.html
+++ b/pages/wishlist.html
@@ -55,7 +55,7 @@
 
       <div>     
         <a href="#footer-title"> <img src="../img/user.png"   class="header-user"> </a>
-        <a href="kassa.html"> <img src="../img/cart.png"   class="shoppingcart"> </a>
+        <!-- <a href="kassa.html"> <img src="../img/cart.png"   class="shoppingcart"> </a> -->
         </div>
  <!-- <img src="img/user.png" onclick="document.location='#kontakt-title'"  class="header-user"> -->
 
