--- a/index.html
+++ b/index.html
@@ -67,70 +67,26 @@
         <a href="#footer-title"> <img src="img/user.png"   class="header-user"> </a>
         </div>
 
-    <div class="cart">
-      <button type="button" img src="img/cart.png" id="cart-btn">
-        <i class="fas fa-shopping-cart"></i>
-        <span id="cart-count-info"></span>
-      </button>
+        <div class="cart">
+          <button type="button" img src="images/cart.png" id="cart-btn">
+            <i class="fas fa-shopping-cart"></i>
+            <span id="cart-count-info"></span>
+          </button>
 
-      <div class="cart-container">
-        <div class="cart-list">
-          <!-- single item -->
-          <!-- <div class = "cart-item">
-              <img src = "images/armchair.png" alt = "product image">
-              <div class = "cart-item-info">
-                <h3 class = "cart-item-name">Arm Chair</h3>
-                <span class = "cart-item-category">Chair</span>
-                <span class = "cart-item-price">120.00 kr</span>
-              </div>
+          <div class="cart-container">
+            <div class="cart-list">
 
-              <button type = "button" class = "cart-item-del-btn">
-                <i class = "fas fa-times"></i>
-              </button>
-            </div> -->
-          <!-- end of single item  -->
+            </div>
+
+            <div class="cart-total">
+              <h3>Total: kr</h3>
+              <span id="cart-total-value"></span>
+            </div>
+          </div>
         </div>
-
-        <div class="cart-total">
-          <h3>Total: kr</h3>
-          <span id="cart-total-value"></span>
-        </div>
-      </div>
-    </div>
-  </nav>
-
-
-
-
+      </nav>
   
-<!-- 
-  <div class="nav-bar">
 
-    <div class="dropdown" id="dropdown">
-      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-      
-      </button>
-      <ul class="dropdown-menu">
-        <li><button class="dropdown-item" type="button" onclick="document.location='/pages/shop.html'">Butik</button></li>
-        <li><button class="dropdown-item" type="button" onclick="document.location='#footer-title'">Om oss</button></li>
-        <li><button class="dropdown-item" type="button" onclick="document.location='inspiration.html'">Inspiration</button></li>
-        <li><button class="dropdown-item" type="button" onclick="document.location='/pages/wishlist.html'">Wishlist</button></li>
-        <li><button class="dropdown-item" type="button" onclick="document.location='/pages/kassa.html'">kassa</button></li>
-        <li><button class="dropdown-item" type="button" onclick="document.location='/pages/konto.html'">Konto</button></li>
-        <li><button class="dropdown-item" type="button" onclick="document.location='#footer-title'">Kontakt</button></li>
-      </ul>
-    </div>
-
-
-    <h5 class="logga-text" onclick="document.location='index.html'">Skaparhyttan</h5>
-   
-   
-   <div>     
-   <a href="#footer-title"> <img src="img/user.png"   class="header-user"> </a>
-   <a href="/pages/kassa.html"> <img src="img/cart.png"   class="shoppingcart"> </a>
-    </div>
-   </div>
-  -->
 
 </header>
 
