--- a/pages/glasunderlagg.html
+++ b/pages/glasunderlagg.html
@@ -119,7 +119,7 @@
   <!-- products section  -->
   <section class="products">
     <div class="container">
-      <h2>Inredning</h2>
+      <h2>Glasunderlägg</h2>
       <div class="product-list">
         <!-- single item -->
         <!-- <div class = "product-item">
