--- a/pages/shop.html
+++ b/pages/shop.html
@@ -243,8 +243,8 @@
           <img src="../img/pendlar.jpg" class="food-img">
         </div>
         <h2 class="food-title">Pendlar</h2>
-        <span class="food-price">300:-</span>
-        <ion-icon name="cart" class="add-cart"></ion-icon>
+        <!-- <span class="food-price">300:-</span>
+        <ion-icon name="cart" class="add-cart"></ion-icon> -->
         <button  onclick="document.location='pendlar.html'"  class=" btn">Se mer</button>
       </div>
 
