--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projektskaparhyttan</title>
+    <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,7 +27,10 @@
 
     <script src="https://kit.fontawesome.com/003b6bb9ad.js" crossorigin="anonymous"></script>
 
+
+    
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/product-sidor.css">
   
 
   </head>
@@ -52,7 +56,7 @@
           <li><a href="inspiration.html" class="dropdown-item">Inspiration</a></li>
           <li><a href="pages/kassa.html" class="dropdown-item">Kassa</a></li>
           <li><a href="pages/konto.html" class="dropdown-item">Konto</a></li>
-          <li><a href="#footer-title" class="dropdown-item">Kontakt</a></li>
+          <li><a href="/pages/kontakt.html" class="dropdown-item">Kontakt</a></li>
         </ul>
       </div>  
 
@@ -101,8 +105,7 @@
 
         <button class="handla-start"  onclick="document.location='shop.html'">HANDLA HÄR!</button>
 
-
-      </div>
+   </div>
 
 
   <div id="carouselExample" class="carousel slide">
@@ -308,6 +311,7 @@ Välkommen! </p>
     </div>
 </div>
 <p class="footer-credit">Butiken med det lilla extra!</p>
+
 
 </footer>
 
