--- a/pages/konto.html
+++ b/pages/konto.html
@@ -51,7 +51,7 @@
           <li><a href="../inspiration.html" class="dropdown-item">Inspiration</a></li>
           <li><a href="../pages/kassa.html" class="dropdown-item">Kassa</a></li>
           <li><a href="../pages/konto.html" class="dropdown-item">Konto</a></li>
-          <li><a href="#footer-title" class="dropdown-item">Kontakt</a></li>
+          <li><a href="/pages/kontakt.html" class="dropdown-item">Kontakt</a></li>
         </ul>
       </div>  
 
@@ -97,6 +97,7 @@
       </div>
     </div>
   </nav>
+
 </header>
 
 
@@ -179,6 +180,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="../app.js"></script>
+    <script src="../js/reserv-product-card.js"></script>
   </body>
 </html>
