--- a/pages/kassa.html
+++ b/pages/kassa.html
@@ -50,7 +50,7 @@
           <li><a href="../inspiration.html" class="dropdown-item">Inspiration</a></li>
           <li><a href="../pages/kassa.html" class="dropdown-item">Kassa</a></li>
           <li><a href="../pages/konto.html" class="dropdown-item">Konto</a></li>
-          <li><a href="#footer-title" class="dropdown-item">Kontakt</a></li>
+          <li><a href="/pages/kontakt.html" class="dropdown-item">Kontakt</a></li>
         </ul>
       </div>  
 
@@ -164,6 +164,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="../app.js"></script>
+    <script src="../js/reserv-product-card.js"></script>
   </body>
 </html>
