--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -57,7 +57,7 @@
           <li><a href="../inspiration.html" class="dropdown-item">Inspiration</a></li>
           <li><a href="../pages/kassa.html" class="dropdown-item">Kassa</a></li>
           <li><a href="../pages/konto.html" class="dropdown-item">Konto</a></li>
-          <li><a href="#footer-title" class="dropdown-item">Kontakt</a></li>
+          <li><a href="../pages/kontakt.html" class="dropdown-item">Kontakt</a></li>
         </ul>
       </div>  
 
