--- a/pages/smahus.html
+++ b/pages/smahus.html
@@ -12,6 +12,16 @@
     crossorigin="anonymous" />
 
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300;400;500;700&display=swap" rel="stylesheet">
+
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merienda:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
+
     <!-- länk som ska in i head taggen, den behöver ligga ovanför din egen CSS fil då den behöver läsas in av webbläsaren innan din CSS läses in. -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -50,7 +60,7 @@
               <li><a href="../inspiration.html" class="dropdown-item">Inspiration</a></li>
               <li><a href="../pages/kassa.html" class="dropdown-item">Kassa</a></li>
               <li><a href="../pages/konto.html" class="dropdown-item">Konto</a></li>
-              <li><a href="#footer-title" class="dropdown-item">Kontakt</a></li>
+              <li><a href="/pages/kontakt.html" class="dropdown-item">Kontakt</a></li>
             </ul>
           </div>  
   
