--- a/pages/vekhallare.html
+++ b/pages/vekhallare.html
@@ -20,6 +20,17 @@
       crossorigin="anonymous"
     />
 
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300;400;500;700&display=swap" rel="stylesheet">
+
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merienda:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
+
     <script src="https://kit.fontawesome.com/003b6bb9ad.js" crossorigin="anonymous"></script>
 
 
@@ -50,7 +61,7 @@
               <li><a href="../inspiration.html" class="dropdown-item">Inspiration</a></li>
               <li><a href="../pages/kassa.html" class="dropdown-item">Kassa</a></li>
               <li><a href="../pages/konto.html" class="dropdown-item">Konto</a></li>
-              <li><a href="#footer-title" class="dropdown-item">Kontakt</a></li>
+              <li><a href="/pages/kontakt.html" class="dropdown-item">Kontakt</a></li>
             </ul>
           </div>  
   
