--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>Projektskaparhyttan</title>
     <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
 
+    <!DOCTYPE html>
+
+    <link rel="icon" href="/img/skaparhyttan neon/favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/skaparhyttan neon/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/skaparhyttan neon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/img/skaparhyttan neon/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/img/skaparhyttan neon/android-chrome-512x512.png">
+
+
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300;400;500;700&display=swap" rel="stylesheet">
